--- a/mongo-express-service.yaml
+++ b/mongo-express-service.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   selector:
     app: mongo-express
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
+      nodePort: 30000
       port: 8081
       targetPort: 8081 
